# auris

./: .gitignore  Auris.spec  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.pt-BR.md  SECURITY.md  auris.pyw  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
auris/: __init__.py  __main__.py  app.py  autostart.py  config.py  icon.py  media.py  models.py  notifications.py  protocol.py  scanner.py
docs/: PROTOCOL.md  make_assets.py
installer/: auris.iss
packaging/: entry.py
packaging/winget/: Abrahao.Auris.installer.yaml  Abrahao.Auris.locale.en-US.yaml  Abrahao.Auris.yaml  README.md
tests/: test_protocol.py
